--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@react-native-community/cli": "^20.0.2",
+      "send": "^0.19.0",
+      "semver@^7.0.0": "^7.6.0"
+    }
   }
 }
