--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -8,8 +8,5 @@
     "lib": ["ES2022"]
   },
   "include": ["src/**/*.ts"],
-  "references": [
-    { "path": "../../libs/shared" },
-    { "path": "../../libs/utils" }
-  ]
+  "references": [{ "path": "../../libs/shared" }, { "path": "../../libs/utils" }]
 }
