--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -9,8 +9,5 @@
     "declaration": true
   },
   "include": ["src/**/*.{ts,tsx}"],
-  "references": [
-    { "path": "../../libs/shared" },
-    { "path": "../../libs/utils" }
-  ]
+  "references": [{ "path": "../../libs/shared" }, { "path": "../../libs/utils" }]
 }
