--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 # Global environment
+BACKEND_ENV_FILE=
+COMPOSE_PROJECT_NAME=berthcare
 NODE_ENV=development
 PORT=3000
-COMPOSE_PROJECT_NAME=berthcare
-BACKEND_ENV_FILE=
 
 # PostgreSQL
+DATABASE_URL=
 POSTGRES_DB=berthcare_dev
-POSTGRES_USER=berthcare
-POSTGRES_PASSWORD=berthcare
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-DATABASE_URL=
+POSTGRES_PASSWORD=berthcare
+POSTGRES_USER=berthcare
 
 # Redis
 REDIS_HOST=localhost
@@ -18,27 +18,28 @@ REDIS_PORT=6379
 REDIS_URL=
 
 # Local AWS stack (LocalStack)
-AWS_REGION=ca-central-1
 AWS_ACCESS_KEY_ID=test
+AWS_REGION=ca-central-1
+AWS_S3_BUCKET=berthcare-local-assets
+AWS_S3_BUCKET_URL=https://berthcare-local-assets.s3.amazonaws.com
+AWS_S3_ENDPOINT=http://localhost:4566
 AWS_SECRET_ACCESS_KEY=test
 AWS_SESSION_TOKEN=
-AWS_S3_ENDPOINT=http://localhost:4566
-AWS_S3_BUCKET=berthcare-local-assets
 LOCALSTACK_HOST=localhost
 LOCALSTACK_PORT=4566
 
 # Observability
-LOG_LEVEL=info
-SENTRY_DSN_BACKEND=
-SENTRY_TRACES_SAMPLE_RATE=0.1
-SENTRY_PROFILES_SAMPLE_RATE=0
 EXPO_PUBLIC_APP_ENV=development
 EXPO_PUBLIC_SENTRY_DSN_MOBILE=
 EXPO_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
+LOG_LEVEL=info
+SENTRY_DSN_BACKEND=
+SENTRY_PROFILES_SAMPLE_RATE=0
+SENTRY_TRACES_SAMPLE_RATE=0.1
 
 # Backend defaults
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=120
-JWT_SECRET=insecure-development-secret
 AUTH_DEMO_EMAIL=care-team@berthcare.dev
 AUTH_DEMO_PASSWORD_HASH=
+JWT_SECRET=insecure-development-secret
+RATE_LIMIT_MAX_REQUESTS=120
+RATE_LIMIT_WINDOW_MS=60000
