feat(mobile): initialize mobile app with auth and navigation
- Set up Expo Router with file-based routing
- Implement activation flow with device fingerprinting
- Add biometric authentication setup
- Create offline PIN fallback system
- Build core navigation structure (Schedule, Clients, Profile)
- Implement design system tokens (colors, typography, spacing, motion)
- Add reusable components (Button, Card, Input, Typography)
- Set up Redux store with auth, network, sync, and security slices
- Configure API client with offline support
- Add accessibility features (reduced motion, screen reader support)
- Implement network status monitoring
- Add performance tracking for app launch metrics

Caregiver-first design: Clear activation flow, intuitive navigation, and offline-ready architecture for reliable field use.

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ LOCALSTACK_PORT=4566
 
 # Observability
 EXPO_PUBLIC_APP_ENV=development
+EXPO_PUBLIC_API_BASE_URL=
 EXPO_PUBLIC_SENTRY_DSN_MOBILE=
 EXPO_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
 LOG_LEVEL=info
