feat: mobile foundation updates - assets, logger service, token storage, and design system improvements

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -22,7 +22,7 @@
         "backgroundColor": "#1B2B65"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +31,6 @@
     "experiments": {
       "typedRoutes": true
     },
-    "assetBundlePatterns": ["**/*"]
+    "assetBundlePatterns": ["assets/**/*"]
   }
 }
