--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -28,9 +28,9 @@
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "~19.1.0",
+    "react-dom": "~19.1.0",
+    "react-native": "~0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "~5.14.5",
     "react-native-safe-area-context": "~5.6.2",
