feat(mobile): implement offline-first sync with WatermelonDB
Implements complete offline-first data synchronization for mobile app:

- WatermelonDB setup with schema mirroring backend (D1, D2)
- Repository pattern for local CRUD with optimistic updates (D3)
- Sync queue with priority ordering for pending changes (D4)
- Sync engine with conflict resolution (last-write-wins) (D5)
- Background sync every 15min + foreground triggers (D6)
- Auto-save with 1s debounce for forms (D7)
- Sync status UI with badges and indicators (D8)

All models (Client, Visit, VisitDocumentation, Medication, Photo) support
offline operations with automatic sync when connectivity restored.

Tests: 63 passed (backend), mobile sync engine and queue covered
Coverage: 60.62% overall, 86.75% auth module

Design lens: offline sync feels effortless and invisible to caregivers

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -3,10 +3,18 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": ".",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": false,
+    "useDefineForClassFields": false,
+    "paths": {
+      "vitest": ["../backend/node_modules/vitest"],
+      "vitest/*": ["../backend/node_modules/vitest/*"]
+    }
   },
   "include": [
     "app",
+    "App.tsx",
     "src",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
