--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -14,7 +14,10 @@
       "backgroundColor": "#1B2B65"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": ["fetch"]
+      }
     },
     "android": {
       "adaptiveIcon": {
