--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -43,7 +43,8 @@
     "zustand": "~5.0.8"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "vitest": "^1.6.1",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/plugin-proposal-decorators": "^7.28.0",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
